feat: remove get all products by workspace name (#29)
